# nautilus_trader

./: Cargo.toml  README.md  pyproject.toml
crates/adapters/interactive_brokers/: Cargo.toml
crates/adapters/interactive_brokers/examples/: data_latency_smoke.rs
crates/adapters/interactive_brokers/src/: factories.rs  lib.rs
crates/adapters/interactive_brokers/src/data/: core.rs  core_streams.rs
crates/adapters/interactive_brokers/src/providers/: parse.rs
crates/adapters/lighter/: Cargo.toml  README.md
crates/adapters/lighter/examples/: data_latency_smoke.rs  data_reaction_latency_probe.rs  live_execution_probe.rs  node_exec_state_probe.rs  private_readonly_probe.rs
crates/adapters/lighter/src/: client.rs  common.rs  config.rs  custom.rs  data.rs  error.rs  execution.rs  factories.rs  lib.rs
crates/adapters/lighter/src/ffi/: loader.rs  mod.rs  signer.rs  types.rs
crates/adapters/lighter/src/http/: client.rs
crates/adapters/lighter/src/models/: account.rs  asset.rs  de.rs  funding.rs  info.rs  market.rs  mod.rs  referral.rs  trade.rs  ws.rs
crates/adapters/lighter/src/nonce/: mod.rs  optimistic.rs
crates/adapters/lighter/src/normalize/: funding.rs  mod.rs  timestamp.rs
crates/adapters/lighter/src/python/: config.rs  factories.rs  http.rs  mod.rs  urls.rs  websocket.rs
crates/adapters/lighter/src/rest/: account.rs  announcement.rs  bridge.rs  client.rs  funding.rs  info.rs  mod.rs  notification.rs  order.rs  referral.rs  token.rs  transaction.rs
crates/adapters/lighter/src/websocket/: client.rs  handler.rs  mod.rs
crates/adapters/lighter/src/ws/: client.rs  handler.rs
crates/adapters/lighter/tests/: data_client.rs  exec_client.rs  http.rs  websocket.rs
crates/adapters/lighter/tests/common/: mod.rs
crates/adapters/variational/: Cargo.toml  README.md
crates/adapters/variational/src/: common.rs  config.rs  data.rs  error.rs  factories.rs  lib.rs  models.rs
crates/adapters/variational/src/http/: client.rs
crates/adapters/variational/src/python/: config.rs  http.rs  mod.rs  urls.rs
crates/adapters/variational/src/websocket/: messages.rs  mod.rs
crates/adapters/variational/tests/: http.rs  websocket.rs
crates/backtest/src/python/: node.rs
crates/core/: Cargo.toml
crates/core/src/: latency.rs  lib.rs
crates/data/: Cargo.toml
crates/data/src/engine/: mod.rs
crates/live/: Cargo.toml
crates/live/src/: runner.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
crates/system/src/: trader.rs
crates/testkit/src/testers/data/: actor.rs  config.rs  tests.rs
crates/trading/src/: lib.rs
crates/trading/src/algorithm/: config.rs  limit_chaser.rs  mod.rs
crates/trading/src/python/: algorithm.rs  mod.rs
docs/api_reference/adapters/: alpaca.md  index.md  lighter.md
docs/getting_started/: installation.md
docs/integrations/: alpaca.md  index.md  lighter.md  variational.md
examples/live/alpaca/: alpaca_data_tester.py
examples/live/lighter/: lighter_data_tester.py  lighter_exec_tester.py
nautilus_trader/adapters/alpaca/: __init__.py  common.py  config.py  constants.py  data.py  execution.py  factories.py  http.py  parsing.py  providers.py  websocket.py
nautilus_trader/adapters/lighter/: PROGRESS.md  README.md  __init__.py  config.py  constants.py  data.py  execution.py  factories.py  parsing.py  providers.py
nautilus_trader/adapters/variational/: __init__.py  config.py  constants.py  factories.py
nautilus_trader/backtest/: native.py
nautilus_trader/examples/algorithms/: limit_chaser.py
nautilus_trader/execution/: native.py
python/: generate_docstrings.py
python/nautilus_trader/backtest/: native.py
python/nautilus_trader/execution/: __init__.py  native.py
python/tests/unit/backtest/: test_native_exec_algorithms.py
tests/integration_tests/adapters/alpaca/: conftest.py  test_data.py  test_execution.py  test_factories.py  test_http.py  test_parsing.py  test_providers.py  test_websocket.py
tests/integration_tests/adapters/lighter/: conftest.py  test_data.py  test_execution.py  test_factories.py  test_parsing.py  test_providers.py
tests/integration_tests/adapters/lighter/sandbox/: common.py  sandbox_http_private.py  sandbox_http_public.py  sandbox_ws_private.py  sandbox_ws_public.py
tests/unit_tests/execution/: test_algorithm.py
