[package]
name = "nautilus-lighter"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Lighter exchange integration adapter for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_lighter"
crate-type = ["rlib"]

[features]
default = ["high-precision"]
extension-module = [
  "nautilus-common/extension-module",
  "nautilus-core/extension-module",
  "nautilus-live/extension-module",
  "nautilus-model/extension-module",
  "python",
  "pyo3/extension-module",
]
python = [
  "dep:nautilus-system",
  "nautilus-common/python",
  "nautilus-core/python",
  "nautilus-live/python",
  "nautilus-model/python",
  "nautilus-system/python",
  "pyo3",
  "pyo3-async-runtimes",
  "pyo3-stub-gen",
]
high-precision = ["nautilus-model/high-precision"]
examples = ["nautilus-live/node"]
latency-probe = ["nautilus-core/latency-probe", "nautilus-live/latency-probe"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-common = { workspace = true, features = ["live"] }
nautilus-core = { workspace = true }
nautilus-live = { workspace = true }
nautilus-model = { workspace = true }
nautilus-system = { workspace = true, optional = true }

ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
blake2 = { workspace = true }
bon = { workspace = true }
futures-util = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_urlencoded = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
nautilus-testkit = { workspace = true }
nautilus-trading = { workspace = true }
rstest = { workspace = true }

# Run with `cargo run -p nautilus-lighter --example lighter-data-latency-smoke --features examples`
[[example]]
name = "lighter-data-latency-smoke"
path = "examples/data_latency_smoke.rs"
required-features = ["examples"]
doc = false

# Run with `cargo run -p nautilus-lighter --example lighter-data-reaction-latency-probe --features examples`
[[example]]
name = "lighter-data-reaction-latency-probe"
path = "examples/data_reaction_latency_probe.rs"
required-features = ["examples", "latency-probe"]
doc = false

# Run with `cargo run -p nautilus-lighter --example lighter-private-readonly-probe --features examples`
[[example]]
name = "lighter-private-readonly-probe"
path = "examples/private_readonly_probe.rs"
required-features = ["examples"]
doc = false

# Run with `cargo run -p nautilus-lighter --example lighter-live-execution-probe --features examples`
[[example]]
name = "lighter-live-execution-probe"
path = "examples/live_execution_probe.rs"
required-features = ["examples"]

[[example]]
name = "lighter-node-exec-state-probe"
path = "examples/node_exec_state_probe.rs"
required-features = ["examples"]
doc = false
